@@ -1,6 +1,7 @@
 package net.minecraft.src;
 
 import java.util.List;
+import java.util.Random;
 
 public class SCBlockHollowLog extends SCBlockLogBase {
 	
@@ -13,7 +14,34 @@ public class SCBlockHollowLog extends SCBlockLogBase {
 	
 	protected SCBlockHollowLog(int iBlockID) {
 		super(iBlockID);
+		
+	    setHardness( 1.25F ); // vanilla 2
+	    setResistance( 3.33F );  // odd value to match vanilla resistance set through hardness of 2
+        
+		SetAxesEffectiveOn();
+		SetChiselsEffectiveOn(false);
+		
+        SetBuoyant();
+		
+		SetFireProperties( FCEnumFlammability.LOGS );
+		
+        setStepSound( soundWoodFootstep );
+		
 		this.setUnlocalizedName("SCBlockHollowLog");
+	}
+	
+	@Override
+	public int idDropped(int par1, Random par2Random, int par3) {
+		return this.blockID;
+	}
+	
+	@Override
+	public boolean DropComponentItemsOnBadBreak( World world, int i, int j, int k, int iMetadata, float fChanceOfDrop )
+	{
+		DropItemsIndividualy( world, i, j, k, FCBetterThanWolves.fcItemSawDust.itemID, 2, 0, fChanceOfDrop );
+		DropItemsIndividualy( world, i, j, k, FCBetterThanWolves.fcItemBark.itemID, 1, iMetadata & 3, fChanceOfDrop );
+		
+		return true;
 	}
 	
 	@Override
